2005-02-09  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (report): New.  Use it.
	(fatal): Take the exit status as argument.
	Use report.
	(run_tex): New function to factor the two tex invocations.
	Move the handling of tex arguments in here to improve locallity.
	Enforce the batch mode by branching /dev/null to its stdin.

2005-02-05  Per Bothner  <per@bothner.com>

	* makeinfo/xml.c (docbook_element_list): Add two missing entries.

	* makeinfo/xml.c (xml_begin_document): Check for mipatch between
	enum xml_element and texinfoml_element_list/docbook_element_list.

	bug-texinfo-mail, 05 Feb 2005 00:13:44 -0800.

2005-02-05  Per Bothner  <per@bothner.com>

	* makeinfo/xref.c (cm_uref): Ulink urls in Docbook need to be
		html-escaped.  bug-texinfo mail, 05 Feb 2005 00:57:55 -0800.

2005-01-30  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\chapmacro) <Ynothingkeyword>: failed to
	\gdef\thischapter inside the group, resulting in "Chapter 1:"
	appearing in the headline of an @unnumbered.
	help-texinfo bug report from: <tdovera@libero.it>,
	27 Jan 2005 11:45:31 +0100.

2005-01-28  Karl Berry  <karl@gnu.org>

	* util/texi2dvi <verbose>: rename variable to verb, since
		functions and variables apparently cannot have the same
		name on Digital UNIX 4.0E, AIX 3.2.5 (325102), ULTRIX V4.5.
		(and related releases, presumably).
        <pgm>: simplify sed expression to avoid \| operator, which does
	        not work on above platforms (and also be more correct).
	<RUNNING_KSH>: switch to ksh under Ultrix.
	All of this stuff reported by Bernhard Simon <simon@zid.tuwien.ac.at>
	and te.

2005-01-25  Karl Berry  <karl@gnu.org>

	* doc/Makefile (texmf_dvips, texmf_pdftex_misc): new paths to
	match teTeX.  tex-k mail from peb, 25 Jan 2005 15:45:37 +0100.

2005-01-23  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (findprog): split $PATH at $path_sep, not spaces.
	(path_sep): don't let ComSpec fool us under cygwin.